Added tags and config for scalar
